# docs/swagger.json
@@ -1,5 +1,5 @@
 {
-  "openapi": "3.0.0",
+  "openapi": "3.1.0",
   "info": {
     "title": "coanda",
     "version": "1.0.0"
@@ -18,8 +18,122 @@
           }
         }
       }
+    },
+    "/replay/create": {
+      "post": {
+        "tags": [
+          "Replay"
+        ],
+        "summary": "Create a replay",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateReplayInput"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "$ref": "#/components/responses/CreateReplaySuccess"
+          }
+        }
+      }
     }
   },
-  "components": {},
+  "components": {
+    "schemas": {
+      "CreateReplayInput": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "object",
+            "required": true
+          },
+          "expireAt": {
+            "oneOf": [
+              {
+                "type": "number"
+              },
+              {
+                "type": "string"
+              }
+            ],
+            "description": "Timestamp in ms",
+            "required": false,
+            "default": 9999999999999
+          }
+        }
+      },
+      "Invalid": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "const": "invalid"
+          },
+          "data": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "description": "ZodIssue"
+            }
+          }
+        }
+      },
+      "Error": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "const": "error"
+          },
+          "data": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "responses": {
+      "CreateReplaySuccess": {
+        "description": "Not authorized. Not logged in.",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "const": "success"
+                },
+                "data": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      },
+      "CreateReplayIssue": {
+        "type": "string",
+        "oneOf": [
+          {
+            "const": "replay_not_found",
+            "description": "Replay data not found"
+          }
+        ]
+      },
+      "CreateReplayFail": {
+        "type": "object",
+        "properties": {
+          "status": {
+            "const": "fail"
+          },
+          "data": {
+            "$ref": "#/components/schemas/CreateReplayIssue"
+          }
+        }
+      }
+    }
+  },
   "tags": []
 }
